--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<h2>Tu perfil - Título.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A   Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
+						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
