--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Andres. </title>
+		<title>Andres cubilllos. </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Tu perfil - zona de diseño e ilustracion.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
