--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - Título -->
+							<!-- Tu perfil - zona de diseño e ilustracion-->
 							<h2>Tu perfil - zona de diseño e ilustracion.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
