--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - zona de diseño e ilustracion-->
-							<h2>Tu perfil - zona de diseño e ilustracion.</h2>
+							<!--  diseño e ilustracion-->
+							<h2> -  diseño e ilustracion.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
