--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!--diseño e ilustracion-->
-							<h2> -diseño e ilustracion.</h2>
+							<h2>diseño e ilustracion.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
