--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="./images/ingenieria.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Andres Cubillos</strong>,Esstudiante.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -26,22 +26,22 @@
 							<h2>ingenieria de sistemas.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la ilustarcion e diseño,Soy una persona responsable, honrado, honesto  y competente; con deseos de superarme mediante mi propio esfuerzo. ..</p>
+						<p>  Aprendo  rápido, me gusta diseñar e ilustrar, y aprender nuevos conocimientos en el area de la programacion,ilustarcion e diseño..</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.pixar.com" target="_blank" class="button">Conoce más de la realizacion de videojugos .</a></li>
 						</ul>
 					</section>
 
 					<!-- Tu portafolio - Lo más importante -->
 					<section id="two">
-						<h2>Mejores experiencias</h2>
+						<h2>capacidades</h2>
 						<div class="row">
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="./images/sistemas.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la CUN.</h3>
 								<!-- Tu portafolio - Descripción -->	
@@ -49,9 +49,9 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
-								<h3>Escribo en Medium.</h3>
-								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
+								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="./images/descarga.jpg" alt="" /></a>
+								<h3>Descripcion.</h3>
+								<p>Me gustan los lenguajes de programación y el manejo y configuración de dispositivos tecnológicos,con deseos de desarrollar aplicaciones para dispositivos móviles, videojuegos, realidad virtual .</p>
 							</article>
 						</div>
 					</section>
