--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Andres cubilllos. </title>
@@ -43,13 +43,13 @@
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="./images/sistemas.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de la CUN.</h3>
+								<h3>Formo parte de blizzard.</h3>
 								<!-- Tu portafolio - Descripción -->	
-								<p>La comunidad profesional web más reconocida del mundo.</p>
+								<p>  profesionales creando videojuegos .</p>
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="./images/descarga.jpg" alt="" /></a>
+								<a href="https://http://us.blizzard.com/es-mx/" target="_blank" class="image fit thumb"><img src="./images/descarga.jpg" alt="" /></a>
 								<h3>Descripcion.</h3>
 								<p>Me gustan los lenguajes de programación y el manejo y configuración de dispositivos tecnológicos,con deseos de desarrollar aplicaciones para dispositivos móviles, videojuegos, realidad virtual .</p>
 							</article>
