--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://us.blizzard.com/es-mx/" target="_blank" class="image fit thumb"><img src="./images/descarga.jpg" alt="" /></a>
+								<a href="us.blizzard.com/es-mx/" target="_blank" class="image fit thumb"><img src="./images/descarga.jpg" alt="" /></a>
 								<h3>Descripcion.</h3>
 								<p>Me gustan los lenguajes de programación y el manejo y configuración de dispositivos tecnológicos,con deseos de desarrollar aplicaciones para dispositivos móviles, videojuegos, realidad virtual .</p>
 							</article>
