--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
-								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<a href="" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="./images/sistemas.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de blizzard.</h3>
+								<h3>blizzard.</h3>
 								<!-- Tu portafolio - Descripción -->	
 								<p>  profesionales creando videojuegos .</p>
 							</article>
