--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
 					<li><a href="https://www.facebook.com/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://latinoamerica.autodesk.com/products/maya/overview" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
-					<li><a href="mailto:tuemail" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
 		<!-- El área final -->				
