--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="./images/ingenieria.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Andres Cubillos</strong>,Esstudiante.<br />
+				<h1><strong>Andres Cubillos</strong>,Estudiante.<br />
 			</header>
 
 		<!-- Contenido principal -->
