--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar">></a><img src="../received_10210446532504811.jpeg" width="447" height="794" alt=""/>
+				<a href="#" class="image avatar">></a><img src="images../received_10210446532504811.jpeg" width="447" height="794" alt=""/>
 				<!-- Tu perfil -->
 				<h1><strong>Andres Cubillos</strong>,Estudiante.<br />
 			</header>
