--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar">></a><img src="images../received_10210446532504811.jpeg" width="447" height="794" alt=""/>
+				<a href="#" class="image avatar">></a><img src="images/received_10210446532504811.jpeg" width="447" height="794" alt=""/>
 				<!-- Tu perfil -->
 				<h1><strong>Andres Cubillos</strong>,Estudiante.<br />
 			</header>
@@ -65,6 +65,8 @@
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
 					<li><a href="https://www.facebook.com/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://twitter.com/login/" target="_blank" class="fa fa-twitter"><span class="label"></span></a></li>
+                    
                     <li><a href="https://www.linkedin.com/m/login/" target="_blank" class="fa fa-linkedin-square"><span class="label"></span></a></li>
 					<li><a href="https://latinoamerica.autodesk.com/products/maya/overview" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
 					<li><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
